Removed Reference to Statsmodel

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "markdown",
       "source": [
         "# Linear Regression\n",
-        "This notebook was developed to demonstrate the fundamental concepts of Linear Regression using SKLearn and statsmodels"
+        "This notebook was developed to demonstrate the fundamental concepts of Linear Regression using SKLearn."
       ],
       "metadata": {
         "id": "0oFsMRpoq5jx"
