--- a/SupportVectorMachine.ipynb
+++ b/SupportVectorMachine.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8Wwj0S_wZq2B"
       },
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "W89Cl7SOt84f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [],
       "id": "W89Cl7SOt84f"
     },
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "RPkp1dlKqLOT"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [],
       "id": "RPkp1dlKqLOT"
     },
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "N4WwSQlNpw7c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [],
       "id": "N4WwSQlNpw7c"
     },
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "hCkiayWqrwG5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [],
       "id": "hCkiayWqrwG5"
     },
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "UyWroVXvp2ZD"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [],
       "id": "UyWroVXvp2ZD"
     },
@@ -197,7 +197,7 @@
         "id": "pMdPOeIcaPD5",
         "outputId": "a817506b-6c8f-4ec7-9b76-7c77d9b284e8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The function below plots a straight line on a plot."
+        "The function below plots a straight line on a plot.\n"
       ],
       "metadata": {
         "id": "M9tus00aRd60"
@@ -232,7 +232,7 @@
         "id": "JihBDwS9RcSn"
       },
       "id": "JihBDwS9RcSn",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +280,7 @@
         "id": "CzeJAaOdUaih"
       },
       "id": "CzeJAaOdUaih",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "ji-6E5QSYZ76"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [],
       "id": "ji-6E5QSYZ76"
     },
@@ -325,7 +325,7 @@
         "outputId": "f4378802-f276-4865-88a9-e0fcc6bf25be"
       },
       "id": "AML-88cigwvW",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -532,7 +532,7 @@
         "outputId": "bcc67040-5494-4e72-c266-5b191b8f9cf7",
         "id": "3BiTh8QQYZ78"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +564,7 @@
         "id": "hhlS4WxvJqA0"
       },
       "id": "hhlS4WxvJqA0",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
         "outputId": "567c1952-0bfb-4967-dff7-ad66af2a33be"
       },
       "id": "t0Iw8tgNJ1Ey",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -626,7 +626,7 @@
         "id": "-ynJjmvLRCnt"
       },
       "id": "-ynJjmvLRCnt",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +645,7 @@
         "outputId": "e2da97a4-ee97-4b0e-91d9-65faad9825cd"
       },
       "id": "8ZtmKveUKAqm",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -692,7 +692,7 @@
         "id": "vtIlTKLjO-aC"
       },
       "id": "vtIlTKLjO-aC",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -705,7 +705,7 @@
         "id": "mGx-uBDhZOfZ"
       },
       "id": "mGx-uBDhZOfZ",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +725,7 @@
         "outputId": "f19787ee-f9c6-456f-94cb-bb12fc6f411c"
       },
       "id": "tOb13nZzEHlD",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -750,7 +750,7 @@
         "id": "8d2d31sfGG62"
       },
       "id": "8d2d31sfGG62",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
         "id": "ul5ZfIvyFXMr"
       },
       "id": "ul5ZfIvyFXMr",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -776,7 +776,7 @@
         "id": "rxWNGH89GWa_"
       },
       "id": "rxWNGH89GWa_",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
         "outputId": "10eb612f-d52d-499c-f3b2-4c820a4c76ff"
       },
       "id": "l5eONGg0GWeM",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -824,7 +824,7 @@
         "outputId": "e4a13acb-e81f-4283-8d9f-1611ebb30ecc"
       },
       "id": "HcTyTFL8Ilvu",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +863,7 @@
         "outputId": "01957cbf-f0cb-48b4-affc-cc48d3ee72fe"
       },
       "id": "-j9fs_-WUHiB",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +889,7 @@
         "id": "-mrxPh6AFaTc"
       },
       "id": "-mrxPh6AFaTc",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -906,7 +906,7 @@
         "outputId": "a570b020-d68e-4ed8-c8f6-cfe41a78db21"
       },
       "id": "bqDq_8PRGDBv",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -937,7 +937,7 @@
         "outputId": "b0b0c7c4-bc6b-4675-98c8-4a9bde45a8c7"
       },
       "id": "ZSdk3GoVIzPO",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,7 +966,7 @@
         "outputId": "e7584d19-e628-4b90-cb6c-e547936e40f1"
       },
       "id": "O3-TpONGUpYP",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1000,7 +1000,7 @@
       "metadata": {
         "id": "k6RBhsmGqlus"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [],
       "id": "k6RBhsmGqlus"
     },
@@ -1018,7 +1018,7 @@
         "outputId": "11bd56bd-fba3-45c6-8e08-3cce66975911"
       },
       "id": "wMkmPe2wgefP",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1275,7 +1275,7 @@
         "outputId": "f9d52400-a9ae-4f89-f9c0-5446b214f6b5"
       },
       "id": "42TSF1P7SLcj",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1310,7 +1310,7 @@
         "id": "arUbWgmdS5df"
       },
       "id": "arUbWgmdS5df",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1328,7 +1328,7 @@
         "outputId": "f7dcf16b-cf8a-49e3-bc54-5efbf51d455e"
       },
       "id": "9oK6qGi5Ta1O",
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1372,7 +1372,7 @@
       "metadata": {
         "id": "HbCUCgSRjWWd"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [],
       "id": "HbCUCgSRjWWd"
     },
@@ -1401,7 +1401,7 @@
         "outputId": "8bccc118-35bb-4363-b739-06ac8ba27e0b"
       },
       "id": "jyToy2JCjG2x",
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1611,7 +1611,7 @@
         "id": "Byc6_7d2jDPZ"
       },
       "id": "Byc6_7d2jDPZ",
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1633,7 +1633,7 @@
         "id": "ZnI9wQYPi24N"
       },
       "id": "ZnI9wQYPi24N",
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1650,7 +1650,7 @@
         "outputId": "e144f944-ab1c-4b91-c7fd-93eb76c2e47e"
       },
       "id": "wYcqTqwzkLgF",
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,7 +1822,7 @@
         "id": "CFy7I-oakH5d"
       },
       "id": "CFy7I-oakH5d",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1845,7 +1845,7 @@
       "metadata": {
         "id": "sBKEwFvOYQOY"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [],
       "id": "sBKEwFvOYQOY"
     },
@@ -1860,7 +1860,7 @@
       "metadata": {
         "id": "3nBKH76srlbi"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [],
       "id": "3nBKH76srlbi"
     },
@@ -1877,7 +1877,7 @@
         "id": "RFiRN-FpARa8",
         "outputId": "49ae35dd-ccc0-4218-dbea-1a01802e54be"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1922,7 +1922,7 @@
         "outputId": "b08b2f7e-9e7b-49d5-ce5a-66174a3fab62"
       },
       "id": "mzjoEw0fep2W",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1961,7 +1961,7 @@
         "id": "H6REzXBLibhi"
       },
       "id": "H6REzXBLibhi",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1978,7 +1978,7 @@
         "outputId": "0dfe4a69-636d-45ad-8c34-717c2a16721b"
       },
       "id": "iMXUGdvAlsJa",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2009,7 +2009,7 @@
         "outputId": "394144df-7fa0-4d86-9007-c8e4c80fcc7e"
       },
       "id": "cjYzlnIwmCJe",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2052,7 +2052,7 @@
       "metadata": {
         "id": "AipfkYLHnlcj"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [],
       "id": "AipfkYLHnlcj"
     },
@@ -2074,7 +2074,7 @@
       "metadata": {
         "id": "AZSyGzK7pSSa"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [],
       "id": "AZSyGzK7pSSa"
     },
@@ -2091,7 +2091,7 @@
         "outputId": "3540adda-3420-4c97-a605-54a0c02c88b9",
         "id": "c90O5KYbpSSa"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2299,7 +2299,7 @@
         "outputId": "53d062b4-0a44-4cc5-fdfa-527e6e32a821"
       },
       "id": "BqD4Ju4CpVML",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2333,7 +2333,7 @@
       "metadata": {
         "id": "MU7kC8qdoIwh"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [],
       "id": "MU7kC8qdoIwh"
     },
@@ -2358,7 +2358,7 @@
       "metadata": {
         "id": "-nOKRI9hoIwj"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [],
       "id": "-nOKRI9hoIwj"
     },
@@ -2373,7 +2373,7 @@
       "metadata": {
         "id": "ju9P5L6poIwk"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [],
       "id": "ju9P5L6poIwk"
     },
@@ -2390,7 +2390,7 @@
         "outputId": "3a8cba0c-76a1-44a6-88a2-3f3e44857a9c",
         "id": "Nrg31xBko7hT"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2447,7 +2447,7 @@
       "metadata": {
         "id": "WRSI31Vuo7hU"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [],
       "id": "WRSI31Vuo7hU"
     },
@@ -2464,7 +2464,7 @@
         "outputId": "2b56d490-eef6-47e8-c8d0-00681920fcca",
         "id": "Fg0Dbuxto7hU"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2495,7 +2495,7 @@
         "outputId": "3df16c35-40c8-45f9-dab3-064d4d0914e2",
         "id": "J4NMxXCDo-Bv"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2543,7 +2543,7 @@
         "outputId": "6a7d4fe1-4e59-4c8a-d678-cf0b626ba07e"
       },
       "id": "871OoZ9ks-6y",
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2569,7 +2569,7 @@
       "metadata": {
         "id": "DBW6KrPosBdf"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [],
       "id": "DBW6KrPosBdf"
     },
@@ -2591,7 +2591,7 @@
       "metadata": {
         "id": "5wwZYizVsBdf"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [],
       "id": "5wwZYizVsBdf"
     },
@@ -2608,7 +2608,7 @@
         "outputId": "e7771081-d6cf-421a-fed8-58dcb508f9f8",
         "id": "DRUdP74LsBdf"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2822,7 +2822,7 @@
       "metadata": {
         "id": "bfPgcE9MsBdf"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [],
       "id": "bfPgcE9MsBdf"
     },
@@ -2848,7 +2848,7 @@
       "metadata": {
         "id": "yHRGXTMAsBdg"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [],
       "id": "yHRGXTMAsBdg"
     },
@@ -2863,7 +2863,7 @@
       "metadata": {
         "id": "-KozG4qZsBdg"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [],
       "id": "-KozG4qZsBdg"
     },
@@ -2880,7 +2880,7 @@
         "outputId": "386b8a07-30de-4bd5-dd58-c12bc5dc17db",
         "id": "1_tXTgbHsBdg"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2941,7 +2941,7 @@
       "metadata": {
         "id": "psDHjOV8sBdg"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [],
       "id": "psDHjOV8sBdg"
     },
@@ -2958,7 +2958,7 @@
         "outputId": "f76b37a1-3095-48c9-de14-67acc37fc4bf"
       },
       "id": "PR_UMH5OxeH5",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3002,7 +3002,7 @@
         "outputId": "1505e1ae-2f0c-4465-eb47-47ca97eaa1c1"
       },
       "id": "H8xFKnkVxkBN",
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3023,7 +3023,7 @@
         "id": "IAtx9OH2ytDo"
       },
       "id": "IAtx9OH2ytDo",
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3038,7 +3038,7 @@
         "id": "b5RRNLgUy19A"
       },
       "id": "b5RRNLgUy19A",
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3051,7 +3051,7 @@
         "id": "q-Ai4h8px2OJ"
       },
       "id": "q-Ai4h8px2OJ",
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3068,7 +3068,7 @@
         "outputId": "7b43f09b-08f5-4433-e0bb-821494fe31bb"
       },
       "id": "b_kjSOIyzLKV",
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
