Changed notebook title to "Logistic Regression"
Notebook was previously called "Linear Regression"

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Linear Regression\n",
+        "# Logistic Regression\n",
         "This notebook was developed to demonstrate the fundamental concepts of Logistic Regression using SKLearn."
       ],
       "metadata": {
